bpy.ops.graph.sound_bake() doesn't check valid filepath #44815

Closed
opened 2015-05-23 16:14:46 +02:00 by Dealga McArdle · 7 comments
Member

System Information
any

Blender Version
any

Short description of error
The operator does not seem to check the validity of the filepath, because normally it is triggered from the UI
after a fileselect dialog. If filepath passed by the user in the form of a script is invalid then the operator
can't assume the filepath is valid, but it does and still tries to run. It will give errors, some of which are listed here,
and none of which are as informative as they could be.

errors

  • SyntaxError (unicode-error) 'unicodescape' codec can't decode bytes in position 2-3 truncated \UXXXXXXXX escape
  • RuntimeError: Error: Unsupported audio format

Ideally it would check the filepath, and return an error about how to construct a valid file path or a reference to a docstring with tips for the various operating systems. Something like:

valid filepaths are.

windows

 filepath = "C:\\some\\folder\\file.mp3"
 filepath = r"C:\some\folder\file.mp3"
 filepath = "C:/some/folder/file.mp3"

posix style (linux, osx)

 filepath = "/home/folder/file.mp3"

why the verbose message?
because paths are hard for people who make this kind of mistake, why not be more helpful. Alternatively a more verbose entry in the helpfile for that operator.

Exact steps for others to reproduce the error
plenty of posts to pick from:
http://blender.stackexchange.com/questions/15288/sound-bake-by-script-unsupported-audio-format-error?rq=1

**System Information** any **Blender Version** any **Short description of error** The operator does not seem to check the validity of the filepath, because normally it is triggered from the UI after a fileselect dialog. If filepath passed by the user in the form of a script is invalid then the operator can't assume the filepath is valid, but it does and still tries to run. It will give errors, some of which are listed here, and none of which are as informative as they could be. errors - ~~SyntaxError (unicode-error) 'unicodescape' codec can't decode bytes in position 2-3 truncated \UXXXXXXXX escape~~ - RuntimeError: Error: Unsupported audio format Ideally it would check the filepath, and return an error about how to construct a valid file path or a reference to a docstring with tips for the various operating systems. Something like: ``` valid filepaths are. ``` # windows ``` filepath = "C:\\some\\folder\\file.mp3" filepath = r"C:\some\folder\file.mp3" filepath = "C:/some/folder/file.mp3" ``` # posix style (linux, osx) ``` filepath = "/home/folder/file.mp3" ``` **why the verbose message?** because paths are hard for people who make this kind of mistake, why not be more helpful. Alternatively a more verbose entry in the helpfile for that operator. **Exact steps for others to reproduce the error** plenty of posts to pick from: http://blender.stackexchange.com/questions/15288/sound-bake-by-script-unsupported-audio-format-error?rq=1
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @tetha.z

Added subscriber: @tetha.z
Campbell Barton was assigned by Bastien Montagne 2015-05-24 18:41:25 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

I can see if the path isn't writable it will give a general (and incorrect) error: "Unsupported audio format".
That can be fixed quite easily.

But there are no steps in this report to redo the error SyntaxError (unicode-error).

Please include a blend file that generates this error with minimal number of steps.

I can see if the path isn't writable it will give a general (and incorrect) error: **"Unsupported audio format"**. That can be fixed quite easily. But there are no steps in this report to redo the error `SyntaxError (unicode-error)`. Please include a blend file that generates this error with minimal number of steps.
Author
Member

Unsupported audio format is the error I get too with invalid paths.

The unicode error is not one i've been able to reproduce but, passing the correct path has supposedly cleared that error. If it's OK with you i'll remove that error message from the bug report and consider this fixed if patched?

The anecdotal nature of the unicode error made me think twice about including it..i shouldn't have.

`Unsupported audio format` is the error I get too with invalid paths. The unicode error is not one i've been able to reproduce but, [passing the correct path has supposedly cleared that error](http://blender.stackexchange.com/questions/31336/audio-visualizer-script-error). If it's OK with you i'll remove that error message from the bug report and consider this fixed if patched? The anecdotal nature of the unicode error made me think twice about including it..i shouldn't have.

This issue was referenced by 39b85e452f

This issue was referenced by 39b85e452faae543d10831e4fa66fdffbc22e0a1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44815
No description provided.