Fix T44815: Sound bake doesn't check filepath